# FilePulse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_debug.sh
.github/workflows/: docker.yml  test.yml
app/: __init__.py  config.py  database.py  main.py  models.py
app/routers/: download.py  upload.py
app/static/: download-inline.js  download.html  download.js  index.html  styles.css  upload.js
app/utils/: file_utils.py  scheduler.py  security.py
tests/: conftest.py  test_config.py  test_database.py  test_download.py  test_file_utils.py  test_main.py  test_models.py  test_scheduler.py  test_security.py  test_upload.py
