[project]
name = "filepulse"
version = "0.1.0"
description = "A secure, simple file sharing application"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.122.0",
    "uvicorn[standard]==0.38.0",
    "sqlalchemy==2.0.44",
    "aiosqlite==0.21.0",
    "apscheduler==3.11.1",
    "python-multipart==0.0.20",
    "pydantic-settings==2.12.0",
    "bleach==6.3.0",
    "jinja2==3.1.6",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
]
